k8s/celery/redis-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-server
  labels:
    app: redis-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-server
  template:
    metadata:
      labels:
        app: redis-server
    spec:
      serviceAccountName: turbinia
      containers:
        - name: redis
          image: "docker.io/redis:6.0.5"
          args: ["--appendonly", "yes", "--save", "30", "1"]
          workingDir: /mnt/turbiniavolume/redis
          resources:
            requests:
              cpu: 2000m
              memory: 2000Mi
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: /mnt/turbiniavolume
              name: turbiniavolume
      volumes:
        - name: turbiniavolume
          persistentVolumeClaim:
            claimName: turbiniavolume-claim
            readOnly: false
