k8s/celery/turbinia-api-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: turbinia-api-server
  labels:
    app: turbinia-api-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: turbinia-api-server
  template:
    metadata:
      annotations:
        prometheus.io/port: "9200"
        prometheus.io/scrape: "true"
      labels:
        app: turbinia-api-server
    spec:
      serviceAccountName: turbinia
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 999
        fsGroup: 999
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: api
          image: us-docker.pkg.dev/osdfir-registry/turbinia/release/turbinia-api-server:latest
          volumeMounts:
            - mountPath: /mnt/turbiniavolume
              name: turbiniavolume
            - mountPath: /etc/turbinia
              name: conf
            - mountPath: /var/log
              name: logs
          ports:
            - containerPort: 9200
            - containerPort: 8000
          resources: 
            requests:
              memory: "1024Mi"
              cpu: "500m"
            limits:
              memory: "16000Mi"
              cpu: "4000m"
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            runAsUser: 999
      volumes:
        - name: turbiniavolume
          persistentVolumeClaim:
            claimName: turbiniavolume-claim
            readOnly: false
        - name: conf
          emptyDir: {}
        - name: logs
          emptyDir: {}
