k8s/celery/turbinia-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: turbinia-controller
  labels:
    app: turbinia-worker-loadtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: turbinia-controller
  template:
    metadata:
      annotations:
        prometheus.io/port: "9200"
        prometheus.io/scrape: "true"
      labels:
        app: turbinia-controller
    spec:
      serviceAccountName: turbinia
      # The grace period needs to be set to the largest task timeout as
      # set in the turbinia configuration file.
      terminationGracePeriodSeconds: 86400
      containers:
        - name: worker
          image: us-docker.pkg.dev/osdfir-registry/turbinia/release/turbinia-twcelery:latest
          command: ["sh", "-c", "tail -f /dev/null"]
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: "/var/run/lock"
              name: lockfolder
              readOnly: false
            - mountPath: /mnt/turbiniavolume
              name: turbiniavolume
          ports:
            - containerPort: 9200
          resources: 
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "8192Mi"
              cpu: "32000m"
      volumes:
        - name: lockfolder
          hostPath:
            path: /var/run/lock
        - name: turbiniavolume
          persistentVolumeClaim:
            claimName: turbiniavolume-claim
            readOnly: false
