k8s/celery/turbinia-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: turbinia-server
  labels:
    app: turbinia-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: turbinia-server
  template:
    metadata:
      annotations:
        prometheus.io/port: "9200"
        prometheus.io/scrape: "true"
      labels:
        app: turbinia-server
    spec:
      serviceAccountName: turbinia
      containers:
        - name: server
          image: us-docker.pkg.dev/osdfir-registry/turbinia/release/turbinia-server:latest
          volumeMounts:
            - mountPath: /mnt/turbiniavolume
              name: turbiniavolume
          ports:
            - containerPort: 9200
      volumes:
        - name: turbiniavolume
          persistentVolumeClaim:
            claimName: turbiniavolume-claim
            readOnly: false
