k8s/celery/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis-server
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis-server
