k8s/celery/turbinia-oauth2-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: turbinia-oauth2-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"ports": {"8080":"turbinia-neg-healthcheck"}}'
spec:
  type: ClusterIP
  selector:
    app: turbinia-oauth2-proxy
  ports:
  - name: oauth2-http
    port: 8080
    protocol: TCP
    targetPort: 9376
